feat: track payment items
